fix height and body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
       background-size: cover;
       background-repeat: no-repeat;
       height: 100vh;
+      overflow: hidden;
 }
 
 .app-container {
@@ -31,7 +32,7 @@ body {
 .app {
       background-color: var(--app_bg_color);
       color: var(--app_fg_color);
-      height: 90vh;
+      height: 85vh;
       width: 30%;
       display: flex;
       flex-direction: column;
